--- a/package.json
+++ b/package.json
@@ -76,6 +76,9 @@
       "json",
       "ts"
     ],
+    "modulePaths": [
+      "src"
+    ],
     "rootDir": "src",
     "testRegex": ".*\\.spec\\.ts$",
     "transform": {
