remove unitary test

--- a/package.json
+++ b/package.json
@@ -76,10 +76,7 @@
       "json",
       "ts"
     ],
-    "modulePaths": [
-      "src"
-    ],
-    "rootDir": "src",
+    "modulePaths": [ "<rootDir>" ],
     "testRegex": ".*\\.spec\\.ts$",
     "transform": {
       "^.+\\.(t|j)s$": "ts-jest"
